--- a/.github/.workflows/main.yml
+++ b/.github/.workflows/main.yml
@@ -20,10 +20,5 @@ jobs:
       run: xcodebuild -showsdks
 
     - name: Build and Test
-      run: |
-        xcodebuild clean build test \
-          -project "EssentialFeed.xcodeproj" \
-          -scheme "CI" \
-          CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          -destination 'platform=iOS Simulator,OS=latest,name=iPhone 14'
+      run: xcodebuild clean build test -project "EssentialFeed.xcodeproj" -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,OS=latest,name=iPhone 14'
+
