--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build and Test
       run: |
         xcodebuild clean build test \
-          -project "EssentialFeed.xcodeproj" \
+          -project EssentialFeed.xcodeproj \
           -scheme "CI" \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
