--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,28 @@ name: CI
 on:
   push:
     branches:
-      - main # Or your main branch name (e.g., master)
+      - main
 
 jobs:
   build_and_test:
-    runs-on: macos-13 # You can specify other macOS versions
+    runs-on: macos-14  
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_14.2.app
-
-    - name: List Xcode versions
-      run: xcodebuild -showsdks
-
+    
+    - name: Show available Xcode versions
+      run: ls -la /Applications/ | grep Xcode
+    
+    - name: Select Xcode 16.2
+      run: sudo xcode-select -switch /Applications/Xcode_16.2.app || sudo xcode-select -switch /Applications/Xcode.app
+    
+    - name: Verify Xcode version
+      run: xcodebuild -version
+    
+    - name: List available schemes
+      run: xcodebuild -list -project EssentialFeed.xcodeproj
+    
     - name: Build and Test
       run: |
         xcodebuild clean build test \
@@ -26,4 +32,4 @@ jobs:
           -scheme "CI" \
           CODE_SIGN_IDENTITY="" \
           CODE_SIGNING_REQUIRED=NO \
-          -destination 'platform=iOS Simulator,OS=latest,name=iPhone 14'
+          -destination 'platform=iOS Simulator,name=iPhone 15'
